platform/overlays/production/patch-namespace-epydios-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epydios-system
  labels:
    epydios.ai/admission-enforced: "true"
