platform/overlays/production/patch-orchestration-runtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestration-runtime
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: runtime
