platform/overlays/production/patch-orchestration-runtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestration-runtime
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: http
